--- a/.env
+++ b/.env
@@ -19,7 +19,7 @@ APP_SECRET=3565522b7338769c2fcc8fbbac34aec7
 ###< symfony/framework-bundle ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=smtp://localhost
+MAILER_DSN=smtp://localhost:8022
 ###< symfony/mailer ###
 
 ###> doctrine/doctrine-bundle ###
